fixed text cutting off for data by state

--- a/src/components/sections/MapSection/MapSection.module.scss
+++ b/src/components/sections/MapSection/MapSection.module.scss
@@ -22,6 +22,7 @@
 
 .containerLeft {
     min-width: 300px;
+    padding-right:30px;
      flex-basis: 70%;
      order:1;
 }
